# Demolish2D

./: .collisionpair.cpp.swp  .object.cpp.swp  .object.h.swp  .polygon.cpp.swp  .polygon.h.swp  .rm.swp  .scenario.cpp.swp  .scenario.h.swp  .sector.cpp.swp  .sector.h.swp  .source.cpp.swp  .todo.txt.swp  .vertex.h.swp  CMakeLists.txt  DEMvis2D.h  Makefile  README.md  buglist.txt  collisionpair.cpp  collisionpair.h  matrix.cpp  matrix.h  object.cpp  object.h  polygon.cpp  polygon.h  render.cpp  render.h  scenario.cpp  scenario.h  sector.cpp  sector.h  source  source.cpp  timer.cpp  timer.h  todo.txt  vertex.cpp  vertex.h
.github/workflows/: ccpp.yml
demolish/: CMakeLists.txt  bugz  driver.cpp  main.cpp
demolishTestBench/SpikesWithProjections/: explaination.txt
docs/: CMakeLists.txt
geometry/: CMakeLists.txt  sector.cpp  sector.h  vertex.cpp  vertex.h
lib/: glut.h
linearalgebra/: matrix.cpp  matrix.h
testingWithPython/: .minimisationTesting.py.swp  minimisationTesting.py
utils/: CMakeLists.txt  matrix.cpp  matrix.h  render_string.cpp  render_string.h  timer.cpp  timer.h
world/: CMakeLists.txt  collision_pair.cpp  collision_pair.h  object.cpp  object.h  scenario.cpp  scenario.h
